--- a/server/package.json
+++ b/server/package.json
@@ -12,9 +12,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.18.1",
-    "hashids": "^2.2.10",
-    "mongoose": "^6.3.3"
+    "mongoose": "^6.3.3",
+    "perma": "^2.0.1"
   },
   "devDependencies": {
     "nodemon": "^2.0.16"
